--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <div alt="Picture of people around a desk" class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of notepad on a wooden desk containing a laptop and a cup of coffee, the notepad page contains images of a product cycle of SEO elements, elements are labeled with words stating, Content, Backlink, Headings, Mobile Compatability,Social Media, Link Building" />
