--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">sero</span>n</h1>
-<<<<<<< HEAD
-         <div> 
-=======
-        <div>
->>>>>>> 14ab140a66e717886a05494151541d5244acb26e
+         <nav> 
             <ul>
                 <li>
                     <a href="#search-engine-optimization" alt="This link is to go down to the search engine location">Search Engine Optimization </a>
@@ -26,67 +22,63 @@
                     <a href="#social-media-marketing" alt="This link is to scroll down to the social media marketing section.">Social Media Marketing</a>
                 </li>
             </ul>
-<<<<<<< HEAD
-        </div> 
-=======
-        </div>
->>>>>>> 14ab140a66e717886a05494151541d5244acb26e
-    </div>
-    <div alt="Picture of people around a desk" class="hero"></div>
-    <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        </nav> 
+    </header>
+    <figcaption alt="Picture of people around a desk" class="hero"></figcaption>
+    <section class="content">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of notepad on a wooden desk containing a laptop and a cup of coffee, the notepad page contains images of a product cycle of SEO elements, elements are labeled with words stating, Content, Backlink, Headings, Mobile Compatability,Social Media, Link Building" />
             
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </article>
+        <article id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"  alt="Image of a laptop on wooden desk with a bar graph of reuptation with a linear representation upward."/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </article>
+        <article id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image of six people sitting around a desk with laptops and ipads and tablets. Three people have word cut outs of Tweet, Share, Like, Media" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        </article>
+    </section>
+    <aside class="benefits">
+        <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="This is a Lead Generation icon."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+        <article class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="This is a Brand Awareness icon."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </article>
+        <article class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="This is a benifit cost logo">
             
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </article>
+    </aside>
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
